--- a/status.html
+++ b/status.html
@@ -10,8 +10,10 @@
         <p id="userAddress"></p>
         <p id="userBalance"></p>
         <p id="plan"></p>
+        <p id="totalReward"></p>
         <button onclick="back()" style="font-size: 17px;">Back</button>
         <button onclick="withdraw()" style="font-size: 17px; text-align: left;">Withdraw</button>
+        <button onclick="emergencyWithdraw()" style="font-size: 17px; background-color: rgb(253, 192, 192);">Emergency Withdraw</button>
     </div>
     <button onclick="logout()" id="logout" style="text-align: right; font-size: 18px; display: none;">Log Out</button>
       <div id="popup" style="
